--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Barzabel <kochenko1995@mail.ru>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 Django = "^3.2.9"
+django-extensions = "^3.1.5"
 
 [tool.poetry.dev-dependencies]
 gunicorn = "^20.1.0"
